# Chip-Testing-Flowcard-Generator

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  config.toml.template  pyproject.toml
backend/built-in-docs/: README.md
backend/built-in-docs/GJB 548C-2021/: target.md
backend/built-in-docs/GJB 548C-2021/chunks/: 1.md  10.md  100.md  1000.md  1001.md  1002.md  1003.md  1004.md  1005.md  1006.md  1007.md  1008.md  1009.md  101.md  1010.md  1011.md  1012.md  1013.md  1014.md  1015.md  1016.md  1017.md  1018.md  1019.md  102.md  1020.md  1021.md  1022.md  1023.md  1024.md  1025.md  1026.md  1027.md  1028.md  1029.md  103.md  1030.md  1031.md  1032.md  1033.md  (+1644 more)
backend/prompts/: chat-with-docs.md  chat.md  common-pre-prompt.md  flowcard-get-tests-from-order.md  flowcard-guidance.md  flowcard-with-message.md  flowcard-with-tests.md  generate-chat-title.md  reranker-instruction.md
backend/scripts/generate-built-in-chunks/: main.py
backend/src/chip-testing-flowcard-generator-backend/: api_router.py  api_server.py  config.py  main.py  task_manager.py
backend/src/chip-testing-flowcard-generator-backend/client/: milvus_client.py
backend/src/chip-testing-flowcard-generator-backend/component/: chat.py  flowcard.py  knowledge.py  knowledge_helper.py  rag.py  user_management.py  vllm_model.py
backend/src/chip-testing-flowcard-generator-backend/routes/: __init__.py  chat.py  docs.py  flowcards.py  qa.py
backend/src/chip-testing-flowcard-generator-backend/util/: __init__.py  generate_doc_id_from_content.py  generate_unique_id.py  image_to_pdf.py  init_logging.py  pdf_to_markdown.py  semantic_search.py  slice_markdown_to_chunks.py
frontend/: .dockerignore  (+6 more)
(+32 files in other folders)
