[project]
name = "chip-testing-flowcard-generator-backend"
version = "0.1.0"
description = "In chip testing, this project utilizes LLMs and RAG to generate testing flow cards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.2",
    "langchain>=1.2.13",
    "langchain-milvus>=0.3.3",
    "langchain-openai>=1.1.12",
    "pdf-craft>=1.0.12",
    "pydantic>=2.12.5",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
